# running_agent

./: .env.example  .gitignore  .running_agent_state.json  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
.codex/: hooks.json
running_agent/: __init__.py  activity_format.py  agent_state.py  athlete_profile.py  auth.py  cli.py  coach_agent.py  coach_log.py  coach_prompt.py  coach_reflection.py  coach_time.py  coaching_guidance.py  coaching_philosophy.txt  daily_checkin.py  debug_context.py  eval_runner.py  evening_report.py  event_log.py  feedback.py  garmin_cache.py  garmin_client.py  garmin_context.py  goal_readiness.py  goal_readiness_history.py  goal_store.py  heart_rate.py  openai_client.py  pace_calibration.py  plan_store.py  plan_suggestion.py  post_run_feedback.py  race_results.py  repl_transport.py  run_memory.py  run_summary.py  scheduled_preview.py  storage.py  storage_paths.py  strava_client.py  strava_store.py  (+12 more)
scripts/: generate_icon_png.js
tests/: test_activity_format.py  test_athlete_profile.py  test_auth.py  test_cli.py  test_coach_agent.py  test_coach_log.py  test_coach_reflection.py  test_coaching_guidance.py  test_daily_checkin.py  test_debug_context.py  test_eval_runner.py  test_evening_report.py  test_event_log.py  test_feedback_and_time.py  test_garmin_cache.py  test_garmin_context.py  test_goal_readiness.py  test_goal_readiness_history.py  test_goal_store.py  test_heart_rate.py  test_openai_client.py  test_pace_calibration.py  test_plan_store.py  test_plan_suggestion.py  test_post_run_feedback.py  test_race_results.py  test_run_memory.py  (+16 more)
(+24 files in other folders)
